--- a/World Cup/worldcup.html
+++ b/World Cup/worldcup.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous">
 
   <!--WorldCup CSS-->
-  <link rel="stylesheet" type="text/css" href="../Bootstrap/WorldCup.css">
+  <link rel="stylesheet" type="text/css" href="../World Cup/WorldCup.css">
 
   <!-- Add icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -40,10 +40,16 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="featuredVideos.html">Featured Videos</a>
+          <a class="nav-link" href="../World Cup/featuredVideos.html">Featured Videos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Bootstrap/scores.html">Scores</a>
+          <a class="nav-link" href="../World Cup/scores.html">Scores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../World Cup/standings.html">Standings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../World Cup/weather.html">Weather</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -88,14 +94,7 @@
     </div>
   </nav>
 </head>
-
 <body>
-
-
-
-
-
-
   <div1 id="demo" class="carousel slide" data-ride="carousel">
 
     <ul class="carousel-indicators">
@@ -151,7 +150,6 @@
         <span class="sr-only">Next</span>
       </a>
   </div1>
-
   <footer>
     <div class="text-center">
       <div id="socialMediaColor">
@@ -163,9 +161,10 @@
         <a href="https://www.instagram.com/fifaworldcup/?hl=en" class="fa fa-instagram" target=_blank></a>
       </div>
     </div>
-    </div>
   </footer>
-</body>
 
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="../World Cup/apiworldcup.js"></script>
 
 </html>
