--- a/World Cup/featuredVideos.html
+++ b/World Cup/featuredVideos.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous">
 
     <!--WorldCup CSS-->
-    <link rel="stylesheet" type="text/css" href="../Bootstrap/WorldCup.css">
+    <link rel="stylesheet" type="text/css" href="../World Cup/WorldCup.css">
 
     <title>FIFA World Cup 2018</title>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -22,7 +22,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">FIFA World Cup</a>
+        <a class="navbar-brand" href="../World Cup/worldcup.html">FIFA World Cup</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul style="color: #1b2cc1" class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../Bootstrap/worldcup.html">Home
+                    <a class="nav-link" href="../World Cup/worldcup.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -39,7 +39,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../Bootstrap/scores.html">Scores</a>
+                    <a class="nav-link" href="../World Cup/scores.html">Scores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../World Cup/standings.html">Standings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../World Cup/weather.html">Weather</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -109,6 +115,6 @@
         </h2>
     </div>
 </footer>
-
+<script src="apiworldcup.js"></script>
 
 </html>
