--- a/World Cup/scores.html
+++ b/World Cup/scores.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
 
     <!--WorldCup CSS-->
-    <link rel="stylesheet" type="text/css" href="../Bootstrap/WorldCup.css">
+    <link rel="stylesheet" type="text/css" href="../World Cup/WorldCup.css">
 
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,7 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">FIFA World Cup</a>
+        <a class="navbar-brand" href="../World Cup/worldcup.html">FIFA World Cup</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../Bootstrap/worldcup.html">Home
+                    <a class="nav-link" href="../World Cup/worldcup.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -41,46 +41,51 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Scores</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Teams
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43922/" target=_blank>Argentina</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43976/" target=_blank>Australia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43935/" target=_blank>Belgium</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43924/" target=_blank>Brazil</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43926/" target=_blank>Colombia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43901/" target=_blank>Costa Rica</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43938/" target=_blank>Croatia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43941/" target=_blank>Denmark</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43855/" target=_blank>Egypt</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43942/" target=_blank>England</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43946/" target=_blank>France</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43948/" target=_blank>Germany</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43951/" target=_blank>Iceland</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43817/" target=_blank>Iran</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43819/" target=_blank>Japan</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43822/" target=_blank>Korea Republic</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43911/" target=_blank>Mexico</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43872/" target=_blank>Morocco</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43876/" target=_blank>Nigeria</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43914/" target=_blank>Panama</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43929/" target=_blank>Peru</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43962/" target=_blank>Poland</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43963/" target=_blank>Portugal</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43965/" target=_blank>Russia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43835/" target=_blank>Saudi Arabia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43879/" target=_blank>Senegal</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/1902465/" target=_blank>Serbia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43969/" target=_blank>Spain</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43970/" target=_blank>Sweden</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43971/" target=_blank>Switzerland</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43888/" target=_blank>Tunisia</a>
-                        <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43930/" target=_blank>Uraguay</a>
-                    </div>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../World Cup/standings.html">Standings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../World Cup/weather.html">Weather</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Teams
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43922/" target=_blank>Argentina</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43976/" target=_blank>Australia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43935/" target=_blank>Belgium</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43924/" target=_blank>Brazil</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43926/" target=_blank>Colombia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43901/" target=_blank>Costa Rica</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43938/" target=_blank>Croatia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43941/" target=_blank>Denmark</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43855/" target=_blank>Egypt</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43942/" target=_blank>England</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43946/" target=_blank>France</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43948/" target=_blank>Germany</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43951/" target=_blank>Iceland</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43817/" target=_blank>Iran</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43819/" target=_blank>Japan</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43822/" target=_blank>Korea Republic</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43911/" target=_blank>Mexico</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43872/" target=_blank>Morocco</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43876/" target=_blank>Nigeria</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43914/" target=_blank>Panama</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43929/" target=_blank>Peru</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43962/" target=_blank>Poland</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43963/" target=_blank>Portugal</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43965/" target=_blank>Russia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43835/" target=_blank>Saudi Arabia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43879/" target=_blank>Senegal</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/1902465/" target=_blank>Serbia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43969/" target=_blank>Spain</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43970/" target=_blank>Sweden</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43971/" target=_blank>Switzerland</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43888/" target=_blank>Tunisia</a>
+                            <a class="dropdown-item" href="https://www.fifa.com/worldcup/teams/team/43930/" target=_blank>Uraguay</a>
+                        </div>
+                    </li>
             </ul>
         </div>
     </nav>
@@ -133,12 +138,92 @@
             <tr>
                 <th scope="row">Group G</th>
                 <td>Belgium vs Panama: 3-0</td>
-                <td>Tunisia vs England: TBD</td>
+                <td>Tunisia vs England: 1-2</td>
             </tr>
             <tr>
                 <th scope="row">Group H</th>
-                <td>Colombia vs Japan: TBD</td>
-                <td>Poland vs Senegal: TBD</td>
+                <td>Colombia vs Japan: 1-2</td>
+                <td>Poland vs Senegal: 1-2</td>
+            </tr>
+            <tr>
+                <th scope="row">Group A</th>
+                <td>Russia vs Egypt: 3-1</td>
+                <td>Uruguay vs Saudi Arabia: 1-0</td>
+            </tr>
+            <tr>
+                <th scope="row">Group B</th>
+                <td>Portugal vs Morocco: 1-0</td>
+                <td>Iran vs Spain: 0-1</td>
+            </tr>
+            <tr>
+                <th scope="row">Group C</th>
+                <td>Denmark vs Australia: 1-1</td>
+                <td>France vs Peru: 1-0</td>
+            </tr>
+            <tr>
+                <th scope="row">Group D</th>
+                <td>Argentina vs Croatia: 0-3</td>
+                <td>Nigeria vs Iceland: 2-0</td>
+            </tr>
+            <tr>
+                <th scope="row">Group E</th>
+                <td>Brazil vs Coasta Rica: 2-0</td>
+                <td>Serbia vs Switzerland: 1-2</td>
+            </tr>
+            <tr>
+                <th scope="row">Group F</th>
+                <td>South Korea vs Mexico: 1-2</td>
+                <td>Germany vs Sweden: 2-1</td>
+            </tr>
+            <tr>
+                <th scope="row">Group G</th>
+                <td>England vs Panama: 6-1</td>
+                <td>No Match</td>
+            </tr>
+            <tr>
+                <th scope="row">Group H</th>
+                <td>Japan vs Senegal: 2-2</td>
+                <td>Poland vs Colombia: 0-3</td>
+            </tr>
+            <tr>
+                <th scope="row">Group A</th>
+                <td>Saudi Arabia vs Egypt: 2-1</td>
+                <td>Uruguay vs Russia: 3-0</td>
+            </tr>
+            <tr>
+                <th scope="row">Group B</th>
+                <td>Iran vs Portugal: 0-1</td>
+                <td>Spain vs Morocco: 1-2</td>
+            </tr>
+            <tr>
+                <th scope="row">Group C</th>
+                <td>Australia vs Peru: TBD</td>
+                <td>Denmark vs France: TBD</td>
+            </tr>
+            <tr>
+                <th scope="row">Group D</th>
+                <td>Nigeria vs Argentina: TBD</td>
+                <td>Iceland vs Croatia: TBD</td>
+            </tr>
+            <tr>
+                <th scope="row">Group E</th>
+                <td>Switzerland vs Costa Rica: TBD</td>
+                <td>Serbia vs Brazil: TBD</td>
+            </tr>
+            <tr>
+                <th scope="row">Group F</th>
+                <td>South Korea vs Germany: TBD</td>
+                <td>Mexico vs Sweden: TBD</td>
+            </tr>
+            <tr>
+                <th scope="row">Group G</th>
+                <td>England vs Belgium: TBD</td>
+                <td>Panama vs Tunisia</td>
+            </tr>
+            <tr>
+                <th scope="row">Group H</th>
+                <td>Senegal vs Colombia: TBD</td>
+                <td>Japan vs Poland: TBD</td>
             </tr>
         </tbody>
     </table>
@@ -157,5 +242,5 @@
     </footer>
 
 </body>
-
+<script src="apiworldcup.js"></script>
 </html>
